chore: add docs, and default traits in api response
