# proto/v1beta1/frontier.pb.validate.go
@@ -5899,40 +5899,6 @@ func (m *ListCurrentUserInvitationsResponse) validate(all bool) error {
 
 	}
 
-	for idx, item := range m.GetOrgs() {
-		_, _ = idx, item
-
-		if all {
-			switch v := interface{}(item).(type) {
-			case interface{ ValidateAll() error }:
-				if err := v.ValidateAll(); err != nil {
-					errors = append(errors, ListCurrentUserInvitationsResponseValidationError{
-						field:  fmt.Sprintf("Orgs[%v]", idx),
-						reason: "embedded message failed validation",
-						cause:  err,
-					})
-				}
-			case interface{ Validate() error }:
-				if err := v.Validate(); err != nil {
-					errors = append(errors, ListCurrentUserInvitationsResponseValidationError{
-						field:  fmt.Sprintf("Orgs[%v]", idx),
-						reason: "embedded message failed validation",
-						cause:  err,
-					})
-				}
-			}
-		} else if v, ok := interface{}(item).(interface{ Validate() error }); ok {
-			if err := v.Validate(); err != nil {
-				return ListCurrentUserInvitationsResponseValidationError{
-					field:  fmt.Sprintf("Orgs[%v]", idx),
-					reason: "embedded message failed validation",
-					cause:  err,
-				}
-			}
-		}
-
-	}
-
 	if len(errors) > 0 {
 		return ListCurrentUserInvitationsResponseMultiError(errors)
 	}
@@ -18604,255 +18570,6 @@ var _ interface {
 	Cause() error
 	ErrorName() string
 } = ListProjectServiceUsersResponseValidationError{}
-
-// Validate checks the field values on ListProjectGroupsRequest with the rules
-// defined in the proto definition for this message. If any rules are
-// violated, the first error encountered is returned, or nil if there are no violations.
-func (m *ListProjectGroupsRequest) Validate() error {
-	return m.validate(false)
-}
-
-// ValidateAll checks the field values on ListProjectGroupsRequest with the
-// rules defined in the proto definition for this message. If any rules are
-// violated, the result is a list of violation errors wrapped in
-// ListProjectGroupsRequestMultiError, or nil if none found.
-func (m *ListProjectGroupsRequest) ValidateAll() error {
-	return m.validate(true)
-}
-
-func (m *ListProjectGroupsRequest) validate(all bool) error {
-	if m == nil {
-		return nil
-	}
-
-	var errors []error
-
-	if utf8.RuneCountInString(m.GetId()) < 3 {
-		err := ListProjectGroupsRequestValidationError{
-			field:  "Id",
-			reason: "value length must be at least 3 runes",
-		}
-		if !all {
-			return err
-		}
-		errors = append(errors, err)
-	}
-
-	if len(errors) > 0 {
-		return ListProjectGroupsRequestMultiError(errors)
-	}
-
-	return nil
-}
-
-// ListProjectGroupsRequestMultiError is an error wrapping multiple validation
-// errors returned by ListProjectGroupsRequest.ValidateAll() if the designated
-// constraints aren't met.
-type ListProjectGroupsRequestMultiError []error
-
-// Error returns a concatenation of all the error messages it wraps.
-func (m ListProjectGroupsRequestMultiError) Error() string {
-	var msgs []string
-	for _, err := range m {
-		msgs = append(msgs, err.Error())
-	}
-	return strings.Join(msgs, "; ")
-}
-
-// AllErrors returns a list of validation violation errors.
-func (m ListProjectGroupsRequestMultiError) AllErrors() []error { return m }
-
-// ListProjectGroupsRequestValidationError is the validation error returned by
-// ListProjectGroupsRequest.Validate if the designated constraints aren't met.
-type ListProjectGroupsRequestValidationError struct {
-	field  string
-	reason string
-	cause  error
-	key    bool
-}
-
-// Field function returns field value.
-func (e ListProjectGroupsRequestValidationError) Field() string { return e.field }
-
-// Reason function returns reason value.
-func (e ListProjectGroupsRequestValidationError) Reason() string { return e.reason }
-
-// Cause function returns cause value.
-func (e ListProjectGroupsRequestValidationError) Cause() error { return e.cause }
-
-// Key function returns key value.
-func (e ListProjectGroupsRequestValidationError) Key() bool { return e.key }
-
-// ErrorName returns error name.
-func (e ListProjectGroupsRequestValidationError) ErrorName() string {
-	return "ListProjectGroupsRequestValidationError"
-}
-
-// Error satisfies the builtin error interface
-func (e ListProjectGroupsRequestValidationError) Error() string {
-	cause := ""
-	if e.cause != nil {
-		cause = fmt.Sprintf(" | caused by: %v", e.cause)
-	}
-
-	key := ""
-	if e.key {
-		key = "key for "
-	}
-
-	return fmt.Sprintf(
-		"invalid %sListProjectGroupsRequest.%s: %s%s",
-		key,
-		e.field,
-		e.reason,
-		cause)
-}
-
-var _ error = ListProjectGroupsRequestValidationError{}
-
-var _ interface {
-	Field() string
-	Reason() string
-	Key() bool
-	Cause() error
-	ErrorName() string
-} = ListProjectGroupsRequestValidationError{}
-
-// Validate checks the field values on ListProjectGroupsResponse with the rules
-// defined in the proto definition for this message. If any rules are
-// violated, the first error encountered is returned, or nil if there are no violations.
-func (m *ListProjectGroupsResponse) Validate() error {
-	return m.validate(false)
-}
-
-// ValidateAll checks the field values on ListProjectGroupsResponse with the
-// rules defined in the proto definition for this message. If any rules are
-// violated, the result is a list of violation errors wrapped in
-// ListProjectGroupsResponseMultiError, or nil if none found.
-func (m *ListProjectGroupsResponse) ValidateAll() error {
-	return m.validate(true)
-}
-
-func (m *ListProjectGroupsResponse) validate(all bool) error {
-	if m == nil {
-		return nil
-	}
-
-	var errors []error
-
-	for idx, item := range m.GetGroups() {
-		_, _ = idx, item
-
-		if all {
-			switch v := interface{}(item).(type) {
-			case interface{ ValidateAll() error }:
-				if err := v.ValidateAll(); err != nil {
-					errors = append(errors, ListProjectGroupsResponseValidationError{
-						field:  fmt.Sprintf("Groups[%v]", idx),
-						reason: "embedded message failed validation",
-						cause:  err,
-					})
-				}
-			case interface{ Validate() error }:
-				if err := v.Validate(); err != nil {
-					errors = append(errors, ListProjectGroupsResponseValidationError{
-						field:  fmt.Sprintf("Groups[%v]", idx),
-						reason: "embedded message failed validation",
-						cause:  err,
-					})
-				}
-			}
-		} else if v, ok := interface{}(item).(interface{ Validate() error }); ok {
-			if err := v.Validate(); err != nil {
-				return ListProjectGroupsResponseValidationError{
-					field:  fmt.Sprintf("Groups[%v]", idx),
-					reason: "embedded message failed validation",
-					cause:  err,
-				}
-			}
-		}
-
-	}
-
-	if len(errors) > 0 {
-		return ListProjectGroupsResponseMultiError(errors)
-	}
-
-	return nil
-}
-
-// ListProjectGroupsResponseMultiError is an error wrapping multiple validation
-// errors returned by ListProjectGroupsResponse.ValidateAll() if the
-// designated constraints aren't met.
-type ListProjectGroupsResponseMultiError []error
-
-// Error returns a concatenation of all the error messages it wraps.
-func (m ListProjectGroupsResponseMultiError) Error() string {
-	var msgs []string
-	for _, err := range m {
-		msgs = append(msgs, err.Error())
-	}
-	return strings.Join(msgs, "; ")
-}
-
-// AllErrors returns a list of validation violation errors.
-func (m ListProjectGroupsResponseMultiError) AllErrors() []error { return m }
-
-// ListProjectGroupsResponseValidationError is the validation error returned by
-// ListProjectGroupsResponse.Validate if the designated constraints aren't met.
-type ListProjectGroupsResponseValidationError struct {
-	field  string
-	reason string
-	cause  error
-	key    bool
-}
-
-// Field function returns field value.
-func (e ListProjectGroupsResponseValidationError) Field() string { return e.field }
-
-// Reason function returns reason value.
-func (e ListProjectGroupsResponseValidationError) Reason() string { return e.reason }
-
-// Cause function returns cause value.
-func (e ListProjectGroupsResponseValidationError) Cause() error { return e.cause }
-
-// Key function returns key value.
-func (e ListProjectGroupsResponseValidationError) Key() bool { return e.key }
-
-// ErrorName returns error name.
-func (e ListProjectGroupsResponseValidationError) ErrorName() string {
-	return "ListProjectGroupsResponseValidationError"
-}
-
-// Error satisfies the builtin error interface
-func (e ListProjectGroupsResponseValidationError) Error() string {
-	cause := ""
-	if e.cause != nil {
-		cause = fmt.Sprintf(" | caused by: %v", e.cause)
-	}
-
-	key := ""
-	if e.key {
-		key = "key for "
-	}
-
-	return fmt.Sprintf(
-		"invalid %sListProjectGroupsResponse.%s: %s%s",
-		key,
-		e.field,
-		e.reason,
-		cause)
-}
-
-var _ error = ListProjectGroupsResponseValidationError{}
-
-var _ interface {
-	Field() string
-	Reason() string
-	Key() bool
-	Cause() error
-	ErrorName() string
-} = ListProjectGroupsResponseValidationError{}
 
 // Validate checks the field values on EnableProjectRequest with the rules
 // defined in the proto definition for this message. If any rules are
